Game intro inserted

--- a/super_tic_tac_toe/assets/config/config.json
+++ b/super_tic_tac_toe/assets/config/config.json
@@ -1,8 +1,9 @@
 {
     "game" : {
-        "screen_size" : [480, 640],
+        "screen_size" : [480, 480],
         "title" : "Super Tic Tac Toe"
+    },
+    "entities" : {
+        "intro_file" : ["super_tic_tac_toe.assets.images", "game_intro.png"]
     }
 }
-        
-        
