--- a/super_tic_tac_toe/assets/config/config.json
+++ b/super_tic_tac_toe/assets/config/config.json
@@ -1,9 +1,15 @@
 {
     "game" : {
         "screen_size" : [480, 480],
-        "title" : "Super Tic Tac Toe"
+        "title" : "Super Tic Tac Toe",
+        "bg_color" : [68, 159, 223]
     },
     "entities" : {
         "intro_file" : ["super_tic_tac_toe.assets.images", "game_intro.png"]
+    },
+    "font" : {
+        "name" : "pixelart_main",
+        "file" : ["super_tic_tac_toe.assets.fonts", "pixelart.ttf"],
+        "size" : 16
     }
 }
